5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1671_1103.log
== TEST (2019-04-24 15:22:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if(b >a):
	if(a <= x <= b):
		print(x "pertence ao intervalo", a",", b)
	else: 
		print(x "nao pertence ao intervalo", a",", b)
else: 
	print("Entradas", a",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:22:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if(b > a):
	if(a <= x <= b):
		print(x "pertence ao intervalo", a",", b)
	else: 
		print(x "nao pertence ao intervalo", a",", b)
else: 
	print("Entradas", a",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:23:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if(b > a):
	if(a <= x <= b):
		print(x "pertence ao intervalo", a",", b)
	else: 
		print(x "nao pertence ao intervalo", a",", b)
else: 
	print("Entradas", a",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:24:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if(b > a):
	if(a =< x =< b):
		print(x "pertence ao intervalo", a",", b)
	else: 
		print(x "nao pertence ao intervalo", a",", b)
else: 
	print("Entradas", a",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 9
    if(a =< x =< b):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:24:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if(b > a):
	if(a <= x <= b):
		print(x "pertence ao intervalo", a",", b)
	else: 
		print(x "nao pertence ao intervalo", a",", b)
else: 
	print("Entradas", a",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:24:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if(b > a):
	if (a <= x <= b):
		print(x "pertence ao intervalo", a",", b)
	else: 
		print(x "nao pertence ao intervalo", a",", b)
else: 
	print("Entradas", a",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:24:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x <= b):
		print(x "pertence ao intervalo", a",", b)
	else: 
		print(x "nao pertence ao intervalo", a",", b)
else: 
	print("Entradas", a",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x "pertence ao intervalo", a",", b)
	else: 
		print(x "nao pertence ao intervalo", a",", b)
else: 
	print("Entradas", a",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x "pertence ao intervalo", a,",", b)
	else: 
		print(x "nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a,",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x "pertence ao intervalo", a,",", b)
	else: 
		print(x "nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b,"," invalidas)
	
-- ERROR:
File "XXXX", line 10
    print(x "pertence ao intervalo", a,",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b,"," invalidas)
	
-- ERROR:
File "XXXX", line 14
    print("Entradas", a,",", b,"," invalidas)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b,"," "invalidas")
	
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:28:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b, "invalidas")
	
-- EXECUTION TIME:
0.12472
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 , 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:29:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b, "invalidas")
	
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:29:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b, "invalidas")
	
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:31:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a) not (b <= a:
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b, "invalidas")
	
-- ERROR:
File "XXXX", line 8
    if (b > a) not (b <= a:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:32:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b, "invalidas")
	
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:32:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
x = float(input("x: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b, "invalidas")
	
-- EXECUTION TIME:
0.196283
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 , 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:33:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(input("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b, "invalidas")
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:33:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(input("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,",", b, "invalidas")
	
-- EXECUTION TIME:
0.175661
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 , 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:35:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(input("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ,"  ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:36:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(input("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ,"nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:36:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(input("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
	
-- OUTPUT:
2.0  nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:36:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(input("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
	
-- EXECUTION TIME:
0.135582
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0  nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5  pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:58:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(input("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
	
-- OUTPUT:
2.0  nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
